--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIFOS</title>
-    <link rel="stylesheet" href="/Style/style.css">
+    <link rel="stylesheet" href="./Style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Roboto:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
 </head>
 
@@ -83,6 +83,6 @@
     </footer>
     
 
-    <script src="/JS/app.js"></script>
+    <script src="./JS/app.js"></script>
 </body>
 </html>
