errores en links

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <hr class="hr-header">
         <nav> 
             <div class="menu">
-                <img class="logo" src="/imagenes/logo-mobile.svg" alt="Logo-mobile">
-                <img id="burger" src="/imagenes/burger.svg" alt="Burger"> 
+                <img class="logo" src="./imagenes/logo-mobile.svg" alt="Logo-mobile">
+                <img id="burger" src="./imagenes/burger.svg" alt="Burger"> 
             </div>
             <ul id="titHiden" class="divCtn">   
                 <div class="divCtn">
                     <li> <a id="modoNocturno"></a></li>
                     <hr class="hiden">
-                    <li> <a href="/HTML/favoritos.html">Favoritos</a></li>
+                    <li> <a href="./HTML/favoritos.html">Favoritos</a></li>
                     <hr class="hiden">
-                    <li> <a href="/HTML/misGifos.html">Mis Gifos</a></li>
-                    <li><a href=""><img src="/imagenes/button-crear-gifo.svg" alt=""></a></li>
+                    <li> <a href="./HTML/misGifos.html">Mis Gifos</a></li>
+                    <li><a href=""><img src="./imagenes/button-crear-gifo.svg" alt=""></a></li>
                 </div>
             </ul>
         </nav>
@@ -33,12 +33,12 @@
         <section class="sectionPrincipal">
             <h1 class="tittle">Inspirate, busca, guarda, y crea los mejores <span class="fos">GIFOS</span></h1>
             <div class="img">
-                <img  class="imgHeader" src="/imagenes/ilustra_header.svg" alt="">
+                <img  class="imgHeader" src="./imagenes/ilustra_header.svg" alt="">
             </div>
         </section>
         <div class="search">    
             <input type="text" placeholder="Busca GIFOS y mas" id="btn-search">
-            <img class="imgSearch" src="/imagenes/icon-search.svg" alt="search icon">
+            <img class="imgSearch" src="./imagenes/icon-search.svg" alt="search icon">
 
             <ul>
                 
@@ -57,7 +57,7 @@
         <div id="resultsImg">
         </div>
         <div class="ctnbuttonMore">
-            <img id="btnMore" src="/imagenes/CTA-ver-mas.svg" alt="">
+            <img id="btnMore" src="./imagenes/CTA-ver-mas.svg" alt="">
         </div>
     </section>
 
@@ -72,9 +72,9 @@
             <div class="CtnRedes">
                 <h2>Compartir en:</h2>
                 <ul>
-                    <a href="www.facebook.com"><img src="/imagenes/icon_facebook.svg" alt="fb"></a>
-                    <a href="www.twitter.com"><img src="/imagenes/icon-twitter.svg" alt="tw"></a>
-                    <a href="www.instagram.com"><img src="/imagenes/icon_instagram.svg" alt="ig"></a>
+                    <a href="www.facebook.com"><img src="./imagenes/icon_facebook.svg" alt="fb"></a>
+                    <a href="www.twitter.com"><img src="./imagenes/icon-twitter.svg" alt="tw"></a>
+                    <a href="www.instagram.com"><img src="./imagenes/icon_instagram.svg" alt="ig"></a>
                 </ul>
             </div>
             <p>© GIFOS 2020 All Rights Reserved.</p>
