--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="divObserver" id="divObserver" ></div>
             <h1 class="tittle">Inspirate, busca, guarda, y crea los mejores <span class="fos">GIFOS</span></h1>
             <div class="img">
-                <img  class="imgHeader" src="./imagenes/ilustra_header.svg" alt="">
+                <img  class="imgHeader" src="/imagenes/ilustra_header.svg" alt="">
             </div>
         </section>
         <div class="searchTotal" id="searchTotal">    
             <div class="search">
                 <input type="text" placeholder="Busca GIFOS y mas" id="btn-search">
-                <img class="imgSearch" src="./imagenes/icon-search.svg" alt="search icon">
+                <img class="imgSearch" src="/imagenes/icon-search.svg" alt="search icon">
             </div>
             <hr id="hrInput">
             <div class="searchRecomend" id="searchRecomend">
@@ -61,11 +61,11 @@
         <h2 class="tittleResults"></h2>
         <div id="resultsImg"> </div>
         <div id="empty" class="empty">
-            <img src="./imagenes/icon-busqueda-sin-resultado.svg" alt="no-results" />
+            <img src="/imagenes/icon-busqueda-sin-resultado.svg" alt="no-results" />
             <h2>Intenta con otra búsqueda.</h2>
         </div>
         <div class="ctnbuttonMore">
-            <img id="btnMore" src="./imagenes/CTA-ver-mas.svg" alt="">
+            <img id="btnMore" src="/imagenes/CTA-ver-mas.svg" alt="">
         </div>
     </section>
 
@@ -73,9 +73,9 @@
         <h2>Trending GIFOS</h2>
         <h3>Mira los ultimos <br class="br" > GIFOS de nuestra comunidad</h3>
         <div id="ctnGif" >
-            <img class="button-slider" src="./imagenes/button-slider-left.svg" alt="Left" id="sliderL" />
+            <img class="button-slider" src="/imagenes/button-slider-left.svg" alt="Left" id="sliderL" />
             <div id="ctnResultGif">   </div>
-            <img class="button-slider" src="./imagenes/Button-Slider-right.svg" alt="Right" id="sliderR" />
+            <img class="button-slider" src="/imagenes/Button-Slider-right.svg" alt="Right" id="sliderR" />
         </div>
 
     </div>
