Cambios en imagenes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="divObserver" id="divObserver" ></div>
             <h1 class="tittle">Inspirate, busca, guarda, y crea los mejores <span class="fos">GIFOS</span></h1>
             <div class="img">
-                <img  class="imgHeader" src="/imagenes/ilustra_header.svg" alt="">
+                <img  class="imgHeader" src="./imagenes/ilustra_header.svg" alt="">
             </div>
         </section>
         <div class="searchTotal" id="searchTotal">    
