Se hicieron cambios de carpetas

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <div class="divCtn">
                     <li> <a id="modoNocturno"></a></li>
                     <hr class="hiden">
-                    <li> <a href="./HTML/favoritos.html">Favoritos</a></li>
+                    <li> <a href="/favoritos.html">Favoritos</a></li>
                     <hr class="hiden">
-                    <li> <a href="./HTML/misGifos.html">Mis Gifos</a></li>
-                    <li><a href="./HTML/crearGifos.html"><img src="./imagenes/button-crear-gifo.svg" id="creaGif" alt=""></a></li>
+                    <li> <a href="/misGifos.html">Mis Gifos</a></li>
+                    <li><a href="/crearGifos.html"><img src="./imagenes/button-crear-gifo.svg" id="creaGif" alt=""></a></li>
                 </div>
             </ul>
         </nav>
