Cambio por error de ortografia

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="gifos">
         <h2>Trending GIFOS</h2>
-        <h3>Mira los ultimos <br class="br" > GIFOS de nuestra comunidad</h3>
+        <h3>Mira los últimos <br class="br" > GIFOS de nuestra comunidad</h3>
         <div id="ctnGif" >
             <img class="button-slider" src="./imagenes/button-slider-left.svg" alt="Left" id="sliderL" />
             <div id="ctnResultGif">   </div>
